fix z-index issue with chat widget

--- a/docs/assets/extra.css
+++ b/docs/assets/extra.css
@@ -5,3 +5,8 @@
 .highlight pre {
     z-index: -1;
 }
+
+.md-sidebar--secondary {
+    /* lower z-index to prevent overlay with chat widget on the embedding page */
+    z-index: -1;
+}
